--- a/HopesPartners_alpha/Views/Manage/Index.cshtml
+++ b/HopesPartners_alpha/Views/Manage/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model HopesPartners_alpha.Models.IndexViewModel
 @{
-    ViewBag.Title = "Manage";
+    ViewBag.Title = "Manage your Account Information";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
-    <h4>Change your account settings</h4>
+    <h4>Change Your Account Information</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>Password:</dt>
@@ -23,11 +23,11 @@
             }
             ]
         </dd>
-        <dt>External Logins:</dt>
+        @*<dt>External Logins:</dt>
         <dd>
             @Model.Logins.Count [
             @Html.ActionLink("Manage", "ManageLogins") ]
-        </dd>
+        </dd>*@
         @*
             Phone Numbers can used as a second factor of verification in a two-factor authentication system.
              
