UserModel View Authorized check
edit

--- a/HopesPartners_alpha/Views/Shared/_LoginPartial.cshtml
+++ b/HopesPartners_alpha/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,15 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @if (User.IsInRole("SuperAdmin"))
+            {
+                @Html.ActionLink("You So Super! ", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            }
+            else
+            {
+                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Details", "UserModels", routeValues: null, htmlAttributes: new { title = "UserModels" })
+            }
+
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
