--- a/HopesPartners_alpha/Views/Shared/_Layout.cshtml
+++ b/HopesPartners_alpha/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li> @Html.ActionLink("Directory","Index","UserModels")</li>
                     @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
